Implement chain backlog items 1-7, 10: timestamps, repeatability, availability, events
- Migrate Long epoch millis to java.time.Instant across quest/chain APIs (Item 1)
- Add cache invalidation on quest definition reload (Item 2)
- Add chain-key tutorial bypass in QuestChainFirstJoinListener (Item 3)
- Add soft-disable tracking and isAlwaysAvailable() for ability unregistration (Item 4)
- Add stale quest definition warnings and resolveAbilityName cleanup (Item 5)
- Add ChainRepeatEvaluator with full repeat mode support (Item 6)
- Add availability window type system with Fixed/Recurring boundaries (Item 7 core)
- Add QuestChainExpireEvent, QuestChainRestartEvent, QuestChainStepRetryEvent (Item 10)

https://claude.ai/code/session_01Ln8kpPanSWnnjZEsfMNKwg